# gym-nonogram

./: .gitignore  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: benchmark.md
examples/: human_play.py  play_random.py  random_agent.py  train_sb3.py
gym_nonogram/: __init__.py  env.py
notebooks/: nonogram_demo.ipynb
scripts/: generate_demo_assets.py
tests/: test_env.py
