[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-nonogram"
version = "0.1.0"
description = "A Gymnasium environment for Nonogram puzzles."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Orso Forghieri" }
]
license = { text = "MIT" }
keywords = ["gymnasium", "reinforcement-learning", "nonogram", "environment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]
demo = [
    "matplotlib>=3.8",
    "notebook>=7.0",
    "pillow>=10.0",
]
sb3 = [
    "stable-baselines3>=2.3",
]

[project.urls]
Homepage = "https://github.com/OrsoF/gym-nonogram"
Repository = "https://github.com/OrsoF/gym-nonogram"

[tool.setuptools.packages.find]
include = ["gym_nonogram*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
packages = ["gym_nonogram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
